# pulumi-aws-apigateway

./: .ci-mgmt.yaml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .goreleaser.yml  Makefile  README.md  renovate.json5  schema.json  schema.yaml
.config/: mise.toml
.devcontainer/: devcontainer.json
.github/workflows/: aws-apigateway-pr-rereview.lock.yml  aws-apigateway-pr-review.lock.yml  build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release-test.yml  release.yml  run-acceptance-tests.yml  tag.yml  test.yml  verify-release.yml
aws-apigateway/: index.ts  package.json
aws-apigateway/apigateway/: README.md  api.ts  index.ts  requestValidator.ts  utils.ts
aws-apigateway/scripts/: build.sh
aws-apigateway/tests/: partition.ts
examples/: examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
examples/apigateway-auth/: Pulumi.yaml  auth-lambda.ts  index.ts  package.json
examples/apigateway-multi-auth/: Pulumi.yaml  index.ts  package.json
examples/apikeysource/: index.ts  package.json
examples/binary-media-types/: Pulumi.yaml  index.ts  (+1 more)
provider/: go.mod  go.sum  provider_test.go
scripts/: renovate.sh
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_apigateway/: __init__.py  _enums.py  _inputs.py  _tables.py  provider.py  rest_api.py
sdk/python/pulumi_aws_apigateway/: __init__.py  _enums.py  _inputs.py  _utilities.py  provider.py  rest_api.py
(+191 files in other folders)
