[project]
  name = "pulumi_aws_apigateway"
  description = "Pulumi Amazon Web Services (AWS) API Gateway Components."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "pulumi-aws>=6.0.0,<7.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "aws", "apigateway", "category/cloud", "kind/component"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "2.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Repository = "https://github.com/pulumi/pulumi-aws-apigateway"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_aws_apigateway = ["py.typed", "pulumi-plugin.json"]
